docs/main.css
html,
body {
  margin: 0;
  font-family: 'Red Hat Text', sans-serif;
  font-size: 1.05rem;
  line-height: 1.6;
  -webkit-font-smoothing: antialiased;
}

body,
main.basic,
main.blog {
  /* Ensures the footer stays at the bottom */
  display: flex;
  flex-direction: column;
  min-height: 100vh;
}

*,
*::before,
*::after {
  box-sizing: border-box;
}

:not(:defined) {
  opacity: 0;
}

:defined {
  transition: opacity 0.2s ease;
}

p:empty {
  display: none;
}

.sr-only {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0, 0, 0, 0);
  white-space: nowrap;
  border-width: 0;
}

summary :is(h1,h2,h3,h4,h5,h6) {
  margin: 0;
  display: inline-block;
}

:is(h1, h2, h3):not([slot]),
p.subtitle {
  font-weight: var(--pf-c-title--m-4xl--FontWeight, var(--pf-global--FontWeight--normal, 600));
  font-family: var(--pf-c-content--heading--FontFamily, var(--pf-global--FontFamily--heading--sans-serif, var(--pf-global--FontFamily--redhat-updated--heading--sans-serif, "Red Hat Display", "Overpass", overpass, helvetica, arial, sans-serif)));
}

h1:not([slot]) {
  /* font-size: 2rem; */
  font-size: var(--pf-c-title--m-4xl--FontSize, var(--pf-c-title--m-4xl--FontWeight, 2.25rem));
  line-height: var(--pf-c-title--m-4xl--LineHeight, var(--pf-global--LineHeight--sm, 1.3));
}

h3:not([slot]),
p.subtitle {
  margin-block-start: 0.83em;
  font-weight: 500;
}

p.subtitle {
  font-size: 1.17em;
}

strong {
  font-weight: bold;
}

header.band {
  background-color:
    var(
      --pf-c-page__main-section--BackgroundColor,
      var(
        --pf-c-page__main-section--m-light-100--BackgroundColor,
        var(--pf-global--BackgroundColor--150, #fafafa)));
  padding: var(--pf-global--spacer--md, 1rem) var(--pf-global--spacer--md, 1rem);
  box-shadow: var(--pf-c-page--section--m-sticky-top--BoxShadow, var(--pf-global--BoxShadow--sm-bottom, 0 0.125rem 0.25rem -0.0625rem rgba(3, 3, 3, 0.16)));
}

/* Not an ideal selector... hacking away */
section.band:not(#component-list):not(#lightw):not(#univ):not(.accent):not(.small) {
  max-width: 1020px;
  padding: var(--pf-global--spacer--md, 1rem) var(--pf-global--spacer--md, 1rem);
}

#component-list {
  padding: var(--pf-global--spacer--xl, 2rem) var(--pf-global--spacer--md, 1rem);
}

section.band.small {
  padding-block: 16px;
  padding-inline: 48px;
}

section.band.base {
  background-color: #ededed;
}

/* This most likely could have unintended side effects */
section.band.overview + section.band {
  display: none;
}


a.cta {
  white-space: normal;
  display: inline-block;
  padding: var(--pf-cta--Padding,.6rem 0) !important;
  color: var(--pf-cta--Color, var(--pf-broadcasted--link,#06c));
  font-family: var(--pf-cta--FontFamily,var(--pf-theme--font-family--heading, "Red Hat Display", "RedHatDisplay", "Overpass", Overpass, Arial,));
  font-size: var(--pf-cta--FontSize, var(--pf-global--FontSize--lg, 1.125rem));
  font-weight: var(--pf-cta--FontWeight,var(--pf-theme--font-weight--bold,700));
  line-height: var(--pf-cta--LineHeight, var(--pf-theme--line-height, 1.5));
  text-decoration: var(--pf-cta--TextDecoration,none) !important;
  position: relative;
  z-index: 0;
  vertical-align: middle;
  max-width: var(--pf-cta--MaxWidth,max-content);
  background-color: var(--pf-cta--BackgroundColor,transparent);
  border-radius: var(--pf-cta--BorderRadius, 3px);
  border: var(--pf-theme--ui--border-width,1px) var(--pf-theme--ui--border-style,solid) var(--pf-cta--BorderColor,transparent);
  cursor: pointer;
  --pf-context-background-color: var(--pf-cta--BackgroundColor, transparent) !important;
}

a.cta:not(.primary):not(.secondary)::after {
  content: '';
  background-image: url("data:image/svg+xml,%3Csvg fill='%230066cc' xmlns='http://www.w3.org/2000/svg' viewBox='0 0 31.56 31.56' %3E%3Cpath d='M15.78 0l-3.1 3.1 10.5 10.49H0v4.38h23.18l-10.5 10.49 3.1 3.1 15.78-15.78L15.78 0z'%3E%3C/path%3E%3C/svg%3E");
  background-repeat: no-repeat;
  display: inline-block;
  translate: 3px 0;
  width: 13px;
  height: 13px;
  transition: translate .3s cubic-bezier(.465, .183, .153, .946);
  margin-bottom: -1px;
}

.band:is(.dark, .accent) a.cta:not(.primary):not(.secondary)::after {
  background-image: url("data:image/svg+xml,%3Csvg fill='white' xmlns='http://www.w3.org/2000/svg' viewBox='0 0 31.56 31.56' %3E%3Cpath d='M15.78 0l-3.1 3.1 10.5 10.49H0v4.38h23.18l-10.5 10.49 3.1 3.1 15.78-15.78L15.78 0z'%3E%3C/path%3E%3C/svg%3E");
}

.band:is(.dark, .accent) a.cta:hover:not(.primary):not(.secondary)::after {
  background-image: url("data:image/svg+xml,%3Csvg fill='white' xmlns='http://www.w3.org/2000/svg' viewBox='0 0 31.56 31.56' %3E%3Cpath d='M15.78 0l-3.1 3.1 10.5 10.49H0v4.38h23.18l-10.5 10.49 3.1 3.1 15.78-15.78L15.78 0z'%3E%3C/path%3E%3C/svg%3E");
}

.band:is(.base) a.cta:not(.primary):not(.secondary)::after {
  background-image: url("data:image/svg+xml,%3Csvg fill='%2306c' xmlns='http://www.w3.org/2000/svg' viewBox='0 0 31.56 31.56' %3E%3Cpath d='M15.78 0l-3.1 3.1 10.5 10.49H0v4.38h23.18l-10.5 10.49 3.1 3.1 15.78-15.78L15.78 0z'%3E%3C/path%3E%3C/svg%3E");
}

.band:is(.base) a.cta:hover:not(.primary):not(.secondary)::after {
  background-image: url("data:image/svg+xml,%3Csvg fill='%23004080' xmlns='http://www.w3.org/2000/svg' viewBox='0 0 31.56 31.56' %3E%3Cpath d='M15.78 0l-3.1 3.1 10.5 10.49H0v4.38h23.18l-10.5 10.49 3.1 3.1 15.78-15.78L15.78 0z'%3E%3C/path%3E%3C/svg%3E");
}

.band:is(.light, .base) a.cta:visited:not(.secondary):not(.secondary)::after {
  background-image: url("data:image/svg+xml,%3Csvg fill='%23004080' xmlns='http://www.w3.org/2000/svg' viewBox='0 0 31.56 31.56' %3E%3Cpath d='M15.78 0l-3.1 3.1 10.5 10.49H0v4.38h23.18l-10.5 10.49 3.1 3.1 15.78-15.78L15.78 0z'%3E%3C/path%3E%3C/svg%3E");
}

.band a.cta:hover:not(.primary):not(.secondary)::after {
  translate: 6px;
}

a.cta:hover:not(.primary):not(.secondary) {
  --pf-broadcasted--link: #004080;
}
/* ... */

